# ASCP

./: .env  .gitignore  CONTRIBUTING.md  Documentaion.md  README.md  clean_runner.py  dlp_demo.py  dlp_demo_secrets_example.py  external_user_demo.py  fix_corpus.py  fix_corpus2.py  fixer.py  layer_b.py  main.py  patch_corpus.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test.py
.github/workflows/: tests.yml
apps/: __init__.py  config.py
apps/adapters/: __init__.py  base.py  hooks.py  runtime_registry.py
apps/gateway/: main.py
apps/gateway/middleware/: pep_input.py  pep_output.py  pep_retrieval.py  pep_tool.py
apps/gateway/policies/: __init__.py  candidates.py  feedback.py  loader.py
ascp_integration/: cli.py  dashboard.html  dashboard.py  exceptions.py  orchestrator.py
ascp_integration/adapters/: README.md  __init__.py  crew_adapter.py  grpc_adapter.py  langchain_adapter.py  langgraph_adapter.py  llamaindex_adapter.py  smolagents_adapter.py
ascp_integration/adapters/proto/: ascp.proto  ascp_pb2.py  ascp_pb2_grpc.py
ascp_integration/tests/: test_grpc_integration.py  test_integration.py
common/: config.py
debugging/: debug_antonym.py  debug_e3.py  verify_fixes.py  verify_prompt.py
dlp/: DEVELOPMENT.md  INTEGRATION.md  README.md  __init__.py  canary.py  config.py  context.py  enforcer.py  entropy.py  features.py  fingerprint.py  messenger.py  ml.py  models.py  ner.py  patterns.py  policy.default.yaml  requirements-dev.txt  requirements.txt  scanner.py  structured.py  validators.py
dlp/ML/: generator.ipynb  train.ipynb
dlp/ML/dlp_lora_package/: README.md  adapter_config.json  tokenizer_config.json
dlp/ci/workflows/: tests.yml
dlp/evaluation/: corpus.json  evaluate.ipynb  runner.py
dlp/tests/: test_canary.py  test_canary_fuzzy.py  test_config.py  test_context.py  test_entropy.py  test_fingerprint.py  test_format_preserving.py  test_integration.py  test_messenger.py  test_models.py  test_ner.py  test_patterns.py  test_scanner_dedup.py  test_structured.py  test_validators.py
examples/: custom_contract.yaml  grpc_client_example.py  grpc_server_example.py  in_process_example.py  langgraph_human_in_loop_example.py  layer_b_custom_policy.yaml  layer_b_custom_policy_demo.py  layer_b_ollama_demo.py  sidecar_client.py  sidecar_server.py
examples/clients/: go_client.go  python_client.py  typescript_client.ts
grounding/: __init__.py  claim_extractor.py  consistency_checker.py  llm_claim_extractor.py  prompts.py  semantic_scorer.py  sufficiency.py  support_checker.py  text_utils.py  trust_vector.py
layerb/: __init__.py  __main__.py  engine.py  readme.md  runtime_registry.py  validator.py
layerb/policies/: __init__.py  candidates.py  editor.py  feedback.py  loader.py
layerb/policy/: default_tool_permissions.yaml
layerb/schemas/: db_query.schema.json  file_read.schema.json  send_email.schema.json
layerd/: __init__.py
layerd/risk/: __init__.py  config.py  enums.py  models.py  result.py  scorer.py
layerd/telemetry/: __init__.py  events.py  live.py  paths.py  sink_jsonl.py
layerd/tests/: test_score.py  test_telemetry.py
logs/: external_user_ascp_demo.jsonl
logs/layer_b/: events.jsonl
policy/: policies.yaml  tool_permissions.yaml
schemas/: file_write.schema.json  retrieval_summary_prompt.schema.json  web_fetch.schema.json
scripts/: debug_antonym.py  debug_e3.py  test_consistency_checker.py  test_local_extractor.py  test_sufficiency.py  test_support_checker.py  test_trust_vector.py  verify_fixes.py  verify_prompt.py
tests/: test_capability_template_matching.py  test_config.py  test_contract_candidates.py  test_inferred_family_matching.py  test_layer_b.py  test_layer_b_feedback.py  test_layer_b_langwatch_service.py  test_unknown_capability_modes.py  test_validator_hardening.py
