[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "layerb"
version = "0.1.0"
description = "Layer B SDK for typed capability contracts and policy enforcement for tool-using LLM agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "langchain==1.2.13",
    "langchain-openai>=0.1.0",
    "langchain-ollama>=0.1.0",
    "langgraph>=0.1.0",
    "openai>=1.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "jsonschema>=4.22.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "aiosqlite>=0.20.0",
    "databases[aiosqlite]>=0.9.0",
    "presidio-analyzer>=2.2.354",
    "presidio-anonymizer>=2.2.354",
    "spacy>=3.7.0",
    "structlog>=24.1.0",
    "tenacity>=8.3.0",
    "anyio>=4.3.0",
    "slowapi>=0.1.9",
    "limits>=3.12.0",
    "requests>=2.32.5",
    "mcp>=1.26.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ascp-dlp"
version = "0.1.0"
description = "ASCP Data Leakage Prevention Module"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
nlp = [
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
]
postgres = [
    "asyncpg>=0.29.0",
    "databases[asyncpg]>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["Dockerfile"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["layerb"]
include = [
    "layerb/policy/*.yaml",
    "layerb/schemas/*.json",
]

[tool.hatch.metadata]
allow-direct-references = true
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "types-PyYAML>=6.0",
]
ner = [
    "spacy>=3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["dlp/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=dlp --cov-report=html --cov-report=term-missing --cov-report=xml"
markers = [
    "integration: integration tests",
    "unit: unit tests",
]

[tool.coverage.run]
source = ["dlp"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["dlp"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
