[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ascp"
version = "0.1.0"
description = "ASCP SDK for grounding, capability contracts, DLP, risk telemetry, and agent-framework adapters."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "jsonschema>=4.22.0",
    "pyyaml>=6.0.1",
    "anyio>=4.3.0",
    "protobuf>=6.31.1",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
]


[project.scripts]
ascp = "ascp_integration.cli:main"


[project.optional-dependencies]
ascp-core = ["pydantic>=2.7.0", "jsonschema>=4.22.0", "pyyaml>=6.0.1", "anyio>=4.3.0"]
ascp-grpc = ["grpcio>=1.80.0", "grpcio-tools>=1.80.0", "protobuf"]
ascp-langchain = ["langchain-core>=0.3.0"]
ascp-langgraph = ["langgraph>=0.1.0", "langchain-core>=0.3.0"]
ascp-crewai = ["crewai>=0.80.0"]
ascp-llamaindex = ["llama-index>=0.11.0"]
ascp-smolagents = ["smolagents>=1.0.0"]
ascp-mcp = ["mcp>=1.26.0"]
ascp-ml = [
    "torch @ https://download.pytorch.org/whl/cu126/torch-2.10.0%2Bcu126-cp311-cp311-win_amd64.whl ; sys_platform == 'win32' and platform_machine == 'AMD64' and python_version == '3.11'",
    "torch @ https://download.pytorch.org/whl/cu126/torch-2.10.0%2Bcu126-cp312-cp312-win_amd64.whl ; sys_platform == 'win32' and platform_machine == 'AMD64' and python_version == '3.12'",
    "torch @ https://download.pytorch.org/whl/cu126/torch-2.10.0%2Bcu126-cp313-cp313-win_amd64.whl ; sys_platform == 'win32' and platform_machine == 'AMD64' and python_version == '3.13'",
    "torch @ https://download.pytorch.org/whl/cu126/torch-2.10.0%2Bcu126-cp314-cp314-win_amd64.whl ; sys_platform == 'win32' and platform_machine == 'AMD64' and python_version == '3.14'",
    "torch @ https://download.pytorch.org/whl/cu126/torch-2.10.0%2Bcu126-cp311-cp311-manylinux_2_28_x86_64.whl ; sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.11'",
    "torch @ https://download.pytorch.org/whl/cu126/torch-2.10.0%2Bcu126-cp312-cp312-manylinux_2_28_x86_64.whl ; sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.12'",
    "torch @ https://download.pytorch.org/whl/cu126/torch-2.10.0%2Bcu126-cp313-cp313-manylinux_2_28_x86_64.whl ; sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.13'",
    "torch @ https://download.pytorch.org/whl/cu126/torch-2.10.0%2Bcu126-cp314-cp314-manylinux_2_28_x86_64.whl ; sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.14'",
    "transformers>=4.46.0",
    "peft>=0.18.0",
    "bitsandbytes>=0.46.1",
    "accelerate>=0.29.0",
    "safetensors>=0.4.0",
    "scipy>=1.11.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
nlp = [
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
]
postgres = [
    "asyncpg>=0.29.0",
    "databases[asyncpg]>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["Dockerfile"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["ascp_integration", "dlp", "grounding", "layerb", "layerd"]
include = [
    "ascp_integration/adapters/proto/*.proto",
    "dlp/policy.default.yaml",
    "dlp/ML/dlp_lora_package/*",
    "layerb/policy/*.yaml",
    "layerb/schemas/*.json",
]

[tool.hatch.metadata]
allow-direct-references = true


[tool.pytest.ini_options]
testpaths = ["tests", "ascp_integration/tests", "dlp/tests", "layerd/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=ascp_integration --cov=dlp --cov=grounding --cov=layerb --cov=layerd --cov-report=html --cov-report=term-missing --cov-report=xml"
markers = [
"integration: integration tests",
"unit: unit tests",
]

[tool.coverage.run]
source = ["dlp"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["dlp"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312", "py313"]
